# hot_potato

./: Cargo.toml
.github/: README  README.md
examples/: example.rs
hot_potato_proc_macro/: Cargo.toml
hot_potato_proc_macro/src/: lib.rs
src/: lib.rs
test_project/: Cargo.toml
test_project/src/: main.rs
