[package]
name = "hot_potato"
version = "0.1.2"
edition = "2021"
authors = ["DragonFighter603"]
repository = "https://github.com/DragonFighter603/hot_potato"
description = "hot reloading library for development"
license = "MIT"
keywords = ["hot-reloading", "magic-values", "dylib", "cdylib"]
categories = ["development-tools", "game-development"]
readme = ".github/README.md"

[dependencies]
hot_potato_proc_macro = { version="*", path="./hot_potato_proc_macro" }
inventory = "0.3.8"
libloading = "0.8.0"
parking_lot = "0.12.1"
